bitfields/tests/compile_error_cases/bitfield_field_defined_bits_0.stderr
error: The field bits must be greater than 0.
 --> tests/compile_error_cases/bitfield_field_defined_bits_0.rs:8:7
  |
8 |     #[bits(0)]
  |       ^^^^^^^
